nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkInterfaces_adq_az_sqlvm_name": {
      "type": "string",
      "defaultValue": "sqlvm-nic"
    },
    "networkInterfaces_adq_az_appvm01_name": {
      "type": "string",
      "defaultValue": "appvm01-nic"
    },
    "networkInterfaces_adq_az_appvm02_name": {
      "type": "string",
      "defaultValue": "appvm02-nic"
    },
    "networkSecurityGroups_adq_az_sqlvm_nsg_name": {
      "type": "string",
      "defaultValue": "sqlvm-nsg"
    },
    "networkSecurityGroups_adq_az_app_nsg_name": {
      "type": "string",
      "defaultValue": "app-nsg"
    },
    "location": {
      "type": "string",
      "defaultValue": "eastus"
    },
    "virtualNetworks_adq_az_vnet_name": {
      "type": "string",
      "defaultValue": "/subscriptions/51f41f85-b52c-4d95-a2f5-28303cbdb6ec/resourceGroups/adq-deploy-rg/providers/Microsoft.Network/virtualNetworks/adq-az-vnet"
    },
    "applicationGateways_adq_az_appgateway_name": {
      "type": "string",
      "defaultValue": "adq-az-appgateway"
    },
    "backendPoolName": {
      "type": "string",
      "defaultValue": "adq-az-backendpool"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkSecurityGroups_adq_az_app_nsg_name')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "HTTP",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 320,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowAnyCustom8080Inbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 330,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkSecurityGroups_adq_az_sqlvm_nsg_name')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowAnyMS_SQLInbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "10.0.0.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 310,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkInterfaces_adq_az_sqlvm_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_sqlvm_nsg_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_adq_az_sqlvm_name')), '/ipConfigurations/ipconfig1')]",
            "properties": {
              "privateIPAddress": "10.0.0.4",
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[concat(parameters('virtualNetworks_adq_az_vnet_name'), '/subnets/VM-Subnet')]"
              },
              "primary": true
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_sqlvm_nsg_name'))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkInterfaces_adq_az_appvm01_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_app_nsg_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_adq_az_appvm01_name')), '/ipConfigurations/ipconfig1')]",
            "properties": {
              "privateIPAddress": "10.0.0.5",
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[concat(parameters('virtualNetworks_adq_az_vnet_name'), '/subnets/VM-Subnet')]"
              },
              "primary": true
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_app_nsg_name'))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkInterfaces_adq_az_appvm02_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_app_nsg_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_adq_az_appvm02_name')), '/ipConfigurations/ipconfig1')]",
            "properties": {
              "privateIPAddress": "10.0.0.6",
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[concat(parameters('virtualNetworks_adq_az_vnet_name'), '/subnets/VM-Subnet')]"
              },
              "primary": true
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_adq_az_app_nsg_name'))]"
        }
      }
    }
  ]
}
